tests/NormalTests/paczka1/fuzzy1/87638930.err
Error in line 7: 4jj57AH2u S735 80,1
Error in line 2: Ndo7yOEEcwD A920 49,4
Error in line 8: 4jj57AH2u A920 45,3
Error in line 27: 4jj57AH2u A412 19,0
